--- a/src/app/layouts/nbr-menu/nbr-menu.component.html
+++ b/src/app/layouts/nbr-menu/nbr-menu.component.html
@@ -1,4 +1,4 @@
-<a mat-list-item routerLink="/agent-representative">All Tax Representatives</a>
+<a mat-list-item routerLink="/list-certificate">List of Qualified Tax Representatives</a>
 <a mat-list-item routerLink="/approve-itp">Approve Tax Representatives</a>
 <a mat-list-item routerLink="/profile">Profile</a>
 <a mat-list-item routerLink="/report-agent">Report</a>
