--- a/src/app/user/dashboard/dashboard.component.html
+++ b/src/app/user/dashboard/dashboard.component.html
@@ -20,11 +20,11 @@
 <div class="container" *ngIf="isItp">
     <div class="subcontainer">
         <h1>{{totalSubmitted}}</h1>
-        <h4>Total no of return submission assisted</h4>
+        <h4>Total No. of Return Submission</h4>
     </div>
     <div class="subcontainer">
         <h1>{{totalSubmittedThisYear}}</h1>
-        <h4>Total of return submission assisted this assessment year</h4>
+        <h4>Total No. of Return Submission During This Assessment Year</h4>
     </div>
 </div>
 </div>
