--- a/src/app/layouts/representative-menu/representative-menu.component.html
+++ b/src/app/layouts/representative-menu/representative-menu.component.html
@@ -17,4 +17,4 @@
 <a mat-list-item routerLink="/profile">Profile</a>
 <!-- <a mat-list-item routerLink="/change-agent">Change Resource Center</a>
 <a mat-list-item routerLink="/previous-rc">Previous Resource Center</a> -->
-<a mat-list-item routerLink="/report-trp">Report</a>
+<a mat-list-item routerLink="/report-itp">Report</a>
