--- a/src/app/report/report-trp/report-trp.component.css
+++ b/src/app/report/report-trp/report-trp.component.css
@@ -34,9 +34,11 @@ mat-spinner{
   height: 30px !important;
 }
 
-caption{
+.caption{
   font-size: 20px;
     font-weight: 600;
     margin-bottom: 20px;
-    color: #3f51b5;
+    color: #367a0a;
+    display: block;
+    clear: both;
 }
