--- a/src/app/report/report-trp/report-trp.component.html
+++ b/src/app/report/report-trp/report-trp.component.html
@@ -10,7 +10,7 @@
                     <mat-select matNativeControl required formControlName="type" (selectionChange)="reportType($event.value)">
                         <mat-option value="">--Select--</mat-option>
                         <mat-option  [value]="1">Tax Payer</mat-option>   
-                        <mat-option  [value]="2">Commission</mat-option>   
+                        <mat-option  [value]="2">Ledger</mat-option>   
                     </mat-select>
                 </mat-form-field>
             </td>
@@ -71,10 +71,11 @@
     </table>
   
 </form>
-<table mat-table class="example-full-width datatable" cellspacing="0"  [dataSource]="dataArr" class="mat-elevation-z8" *ngIf="loaded" id="dataTable"> 
-    <caption *ngIf="firstOption=='1' && secondOption=='1'">Tax Payer Info</caption>
-    <caption *ngIf="firstOption=='2'&& secondOption=='1'">Commission of TRP</caption>
+<h3 class="caption" *ngIf="firstOption=='1' && secondOption=='1'">Tax Payer Info</h3>
+<h3 class="caption" *ngIf="firstOption=='2'&& secondOption=='1'">Ledger of Tax Representative</h3>
 
+<table mat-table class="example-full-width datatable" cellspacing="0"  [dataSource]="dataArr" class="mat-elevation-z8" *ngIf="loaded" id="dataTable"> 
+   
       <!--All Commissions containing trp and agent name-->
       <ng-container matColumnDef="taxpayerName">
         <th mat-header-cell *matHeaderCellDef> Taxpayer Name</th>
@@ -86,45 +87,21 @@
         <td mat-cell *matCellDef="let element"> {{element.taxpayerId}} </td>
       </ng-container>
 
-      <ng-container matColumnDef="created_at" >
-        <th mat-header-cell *matHeaderCellDef> Created At</th>
-        <td mat-cell *matCellDef="let element"> {{element.created_at | date:('short') }} </td>
-      </ng-container>
-
       <ng-container matColumnDef="paidAmount" >
         <th mat-header-cell *matHeaderCellDef> Tax Paid</th>
         <td mat-cell *matCellDef="let element"> {{element.paidAmount}} </td>
       </ng-container>
 
-      <ng-container matColumnDef="paymentMethod" *ngIf="firstOption=='1'">
-        <th mat-header-cell *matHeaderCellDef>Payment Method</th>
-        <td mat-cell *matCellDef="let element"> {{element.paymentMethod}} </td>
-      </ng-container>
-
-      <ng-container matColumnDef="transactionId" *ngIf="firstOption=='1'">
-        <th mat-header-cell *matHeaderCellDef>Transaction Id</th>
-        <td mat-cell *matCellDef="let element"> {{element.transactionId}} </td>
-      </ng-container>
       
       <ng-container matColumnDef="assessmentYear" >
         <th mat-header-cell *matHeaderCellDef>Assessment Year</th>
         <td mat-cell *matCellDef="let element"> {{element.assessmentYear}} </td>
       </ng-container>
 
-      <ng-container matColumnDef="yearNo" *ngIf="firstOption=='1'">
-        <th mat-header-cell *matHeaderCellDef>Times Submitted</th>
-        <td mat-cell *matCellDef="let element"> {{element.yearNo}} </td>
+      <ng-container matColumnDef="created_at" >
+        <th mat-header-cell *matHeaderCellDef> Created At</th>
+        <td mat-cell *matCellDef="let element"> {{element.created_at | date:('short') }} </td>
       </ng-container>
-
-      <ng-container matColumnDef="representativeTin">
-        <th mat-header-cell *matHeaderCellDef>TRP Tin</th>
-        <td mat-cell *matCellDef="let element"> {{element.representativeTin}} </td>
-      </ng-container>
-      <ng-container matColumnDef="representativeCommission">
-        <th mat-header-cell *matHeaderCellDef>TRP Commission</th>
-        <td mat-cell *matCellDef="let element"> {{element.representativeCommission}} </td>
-      </ng-container>
-
 
 
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
