--- a/src/app/user/list-user/list-user.component.html
+++ b/src/app/user/list-user/list-user.component.html
@@ -12,7 +12,7 @@
     <!-- Position Column -->
     <ng-container matColumnDef="serial">
       <th mat-header-cell *matHeaderCellDef>Serial </th>
-      <td mat-cell *matCellDef="let element;let i=index;"> {{i+1}} </td>
+      <td mat-cell *matCellDef="let element;let i=index;"> {{agentsArr.length-i}} </td>
     </ng-container>
 
     <ng-container matColumnDef="username">
